--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <title>trillo &mdash; Your all-in-one booking app</title>
     </head>
     <body>
+
         <div class="container">
             <header class="header">
                 <img src="./img/logo.png" alt="logo" class="logo">
@@ -41,14 +42,122 @@
                     </div>
                 </nav>
             </header>
+            
             <div class="content">
                 <nav class="sidebar">
-                    Navigation
+                    <ul class="side-nav">
+                        <li class="side-nav__item side-nav__item--active">
+                            <a href="#/" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-home"></use>
+                                </svg>
+                                <span>Hotel</span>
+                            </a>
+                        </li>
+                        <li class="side-nav__item">
+                            <a href="#/" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
+                                </svg>
+                                <span>Flight</span>
+                            </a>
+                        </li>
+                        <li class="side-nav__item">
+                            <a href="#/" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-key"></use>
+                                </svg>
+                                <span>Car rental</span>
+                            </a>
+                        </li>
+                        <li class="side-nav__item">
+                            <a href="#/" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-map"></use>
+                                </svg>
+                                <span>Tours</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="legal">&copy; 2019 by Trillo. All rights reserved</div>
                 </nav>
+
                 <main class="hotel-view">
-                    Hotel view
+                    <div class="gallery">
+                        <figure class="gallery__item">
+                            <img src="img/hotel-1.jpg" alt="hotel1" class="gallery__image">
+                        </figure>
+                        <figure class="gallery__item">
+                            <img src="img/hotel-2.jpg" alt="hotel2" class="gallery__image">
+                        </figure>
+                        <figure class="gallery__item">
+                            <img src="img/hotel-3.jpg" alt="hotel3" class="gallery__image">
+                        </figure>
+                    </div>
+
+                    <div class="overview">
+                        <h1 class="overview__heading">Hotel Las Palmas</h1>
+                        <div class="overview__stars">
+                            <svg class="overview__icon">
+                                <use xlink:href="./img/sprite.svg#icon-star"></use> 
+                            </svg>
+                            <svg class="overview__icon">
+                                <use xlink:href="./img/sprite.svg#icon-star"></use> 
+                            </svg>
+                            <svg class="overview__icon">
+                                <use xlink:href="./img/sprite.svg#icon-star"></use> 
+                            </svg>
+                            <svg class="overview__icon">
+                                <use xlink:href="./img/sprite.svg#icon-star"></use> 
+                            </svg>
+                            <svg class="overview__icon">
+                                <use xlink:href="./img/sprite.svg#icon-star"></use> 
+                            </svg>
+                        </div>
+                        <div class="overview__location">
+                            <svg class="overview__icon overview__icon--location">
+                                <use xlink:href="./img/sprite.svg#icon-location-pin"></use> 
+                            </svg>
+                            <button class="button-inline">Albufeira, Portugal</button>
+                        </div>
+                        <div class="overview__rating">
+                            <div class="overview__rating-average">9.2</div>
+                            <div class="overview__rating-count">321 votes</div>
+                        </div>
+                    </div>
+
+                    <div class="detail">
+                        <div class="description">
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, reprehenderit. Asperiores enim ut, placeat fugit rem laborum nobis, velit molestiae animi officia cupiditate itaque nisi deleniti. Fugit nobis illo quaerat.</p>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, reprehenderit. Asperiores enim ut, placeat fugit rem laborum nobis, velit molestiae animi officia.</p>                        
+                            <ul class="list">
+                                <li class="list__item">Close to the beach</li>
+                                <li class="list__item">Breakfast included</li>
+                                <li class="list__item">Free airport shuttle</li>
+                                <li class="list__item">Free wifi in all rooms</li>
+                                <li class="list__item">Air conditioning and heating</li>
+                                <li class="list__item">Pets allowed</li>
+                                <li class="list__item">We speak all languages</li>
+                                <li class="list__item">Perfect for families</li>
+                            </ul>
+                            <div class="recommend">
+                                <p class="recommend__count">
+                                    Lucy and 3 other friends recommend this hotel.
+                                </p>
+                                <div class="recommend__friends">
+                                    <img src="img/user-3.jpg" alt="friend 3" class="recommend__image">
+                                    <img src="img/user-4.jpg" alt="friend 4" class="recommend__image">
+                                    <img src="img/user-5.jpg" alt="friend 5" class="recommend__image">
+                                    <img src="img/user-6.jpg" alt="friend 6" class="recommend__image">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="user-reviews"> user-reviews</div>
+                    </div>
                 </main>
+
             </div>
         </div>
+
     </body>
 </html>
