last part of layout completed

--- a/index.html
+++ b/index.html
@@ -152,7 +152,44 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="user-reviews"> user-reviews</div>
+                        <div class="user-reviews">
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero tempore rem sint incidunt quis.
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-1.jpg" alt="user 1" class="review__image">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Nick Smith</p>
+                                        <p class="review__user-date">May 2, 2019</p>
+                                    </div>
+                                    <div class="review__rating">8.2</div>
+                                </figcaption>
+                            </figure>
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero tempore rem sint incidunt quis.
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-2.jpg" alt="user 1" class="review__image">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Mary Thomas</p>
+                                        <p class="review__user-date">August 13, 2018</p>
+                                    </div>
+                                    <div class="review__rating">7.6</div>
+                                </figcaption>
+                            </figure>
+                            <button class="button-inline">Show more <sapn class="button-inline__arrow">&rarr;</sapn></button>
+                        </div>
+                    </div>
+                    <div class="cta">
+                        <h2 class="cta__book-now">
+                            Good news! we have 4 free rooms for your selected dates!
+                        </h2>
+                        <button class="button">
+                            <span class="button__visible">Book now</span>
+                            <span class="button__invisible">Only 4 rooms left</span>
+                        </button>
                     </div>
                 </main>
 
